<resources>
    <string name="app_name">FinalProject</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation Drawer</string>
    <string name="navigation_drawer_close">Close navigation Drawer</string>
    <string name="welcome_to_it_asset_management">Welcome to IT Asset Management</string>
    <string name="sign_in">Sign in</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="sign_up">SIGN UP</string>
    <string name="don_t_have_account">Don\'t have account ?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="home">Home</string>
    <string name="assets">Assets</string>
    <string name="assignment">Assignment</string>
    <string name="requests">Requests</string>
    <string name="reports">Reports</string>
    <string name="profile">Profile</string>
    <string name="user">User</string>
    <string name="it_asset_management">IT Asset Management</string>
    <string name="hoa_sen_university">Hoa Sen University</string>
    <string name="create_new_asset">Create New Asset</string>
    <string name="edit_asset">Edit Asset</string>
    <string name="name_of_new_asset">Name of New Asset</string>
    <string name="category">Category</string>
    <string name="specification">Specification</string>
    <string name="install_date">Install Date</string>
    <string name="state">State:</string>
    <string name="available">Available</string>
    <string name="notavailable">Not Available</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="select_assigned_date">Select assigned date</string>


    <string name="sign_in_succesfully">Sign in successfully</string>
    <string name="sign_up_succesfully">Sign up successfully</string>
    <string name="sign_in_with_wrong_password">You type wrong password !!</string>
    <string name="user_not_found">The account has not been initialized</string>
    <string name="request_pending">Request\nPending</string>
    <string name="request_complete">Request\nComplete</string>
    <string name="assets_avaiable">Assets\nAvaiable</string>
    <string name="my_task">My Task</string>
    <string name="create_category">CREATE CATEGORY</string>
    <string name="create_request">Create Request</string>
    <string name="back_2_time">Please click BACK again to exit</string>
    <string name="create_asset_successfully">Create asset successfully</string>
    <string name="update_asset_successfully">Update asset successfully</string>
    <string name="create_user_successfully">Create user successfully</string>
    <string name="create_request_successfully">Create request successfully</string>
    <string name="update_user_successfully">Update user successfully</string>
    <string name="remove_asset_successfully">Remove asset successfully</string>
    <string name="accept_request_successfully">Accept request successfully</string>
    <string name="remove_assignment_successfully">Remove assignment successfully</string>
    <string name="create_return_request_successfully">Create return request successfully</string>
    <string name="accept_return_request_successfully">Accept return request successfully</string>
    <string name="decline_return_request_successfully">Decline return request successfully</string>
    <string name="warning_have_to_admin">Only ADMIN access this function</string>
    <string name="warning_have_to_user">Only USER can access this function</string>
    <string name="cancel_return_request_successfully">Cancel return request successfully</string>
    <string name="remove_request_successfully">Remove request successfully</string>
    <string name="declined_request_successfully">Decline request successfully</string>
    <string name="remove_user_successfully">Remove user successfully</string>
    <string name="create_assignment_successfully">Create assignment successfully</string>

    <!--    validate string error-->
    <string name="email_error">Email is not valid </string>
    <string name="password_error">Password must input at least 6 character </string>
    <string name="null_error">This field require not null</string>
    <string name="user_information">User Information</string>
    <string name="user_management">User Management</string>
    <string name="manage_assets">Manage Assets</string>
    <string name="asset_code">Asset Code</string>
    <string name="asset_name">Asset Name</string>
    <string name="state1">State</string>
    <string name="title_menu_state_pending">Pending</string>
    <string name="title_menu_state_complete">Complete</string>
    <string name="create_new_request">Create New Request</string>
    <string name="all">All</string>
    <string name="not_available">Not Available</string>
    <string name="search">Search..</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="select_date_of_birth">Select date of birth</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_joined_date">Select joined date</string>
    <string name="choose_type">Choose type</string>
    <string name="create_new_user">Create New User</string>
    <string name="update_user">Update User</string>
    <string name="admin">Admin</string>
    <string name="type">Type</string>
    <string name="staff_code">Staff Code</string>
    <string name="full_name">Full Name</string>
    <string name="joined_date">Joined Date</string>

    <string name="full_name_format">%s %s</string>
    <string name="search1">Search....</string>
    <string name="manage_users">Manage Users</string>
    <string name="asset_management">Asset Management</string>
    <string name="assign_management">Assign Management</string>
    <string name="next">Next</string>
    <string name="user_name">User Name</string>
    <string name="pass">Password</string>
    <string name="back">Back</string>
    <string name="manage_assignment">Manage Assignment</string>
    <string name="manage_asset">Manage issued Asset</string>
    <string name="manage_returning">Manage return Asset</string>
    <string name="no">No.</string>
    <string name="assigned_to">Assigned To</string>
    <string name="assigned_by">Assigned By</string>
    <string name="assigned_date">Assigned date</string>
    <string name="report">Report</string>
    <string name="total">Total</string>
    <string name="assigned">Assigned</string>
    <string name="create_new_assignment">Create new assignment</string>
    <string name="declined">Declined</string>
    <string name="completed">Completed</string>
    <string name="waiting">Waiting</string>
    <string name="are_you_sure_to_delete_item">Are you sure?</string>
    <string name="delete">Delete</string>
    <string name="you_will_not_able_to_recover_this_item">You will not able to recover this item</string>
    <string name="yes_delete_it">Yes, delete it</string>
    <string name="management">Management</string>
    <string name="log_out">Log out</string>
    <string name="requesting">Requesting</string>
    <string name="request_return_asset">Request Return Asset</string>
    <string name="return_date">return date</string>
    <string name="create">Create</string>
    <string name="manage_issued_asset">Manage issued asset</string>
    <string name="return_1">return</string>
    <string name="holding">Pending</string>
    <string name="returning">Returning Request</string>
    <string name="returned">Returned</string>
    <string name="issued_asset">Issued Asset</string>
    <string name="my_profile">My Profile</string>
    <string name="pending">Pending</string>
    <string name="canceled">canceled</string>
</resources>