<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools">

    <data>
        <variable
            name="user"
            type="com.son.finalproject.data.User" />

    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_10sdp"
        android:orientation="horizontal">

        <TextView
            style="@style/FieldChildren"
            android:layout_width="@dimen/_100sdp"
            android:text="@{user.staffCode}"
            tool:text="@string/staff_code" />

        <TextView
            style="@style/FieldChildren"
            android:layout_width="@dimen/_100sdp"
            android:text="@{@string/full_name_format(user.lastName, user.firstName)}"
            tool:text="@string/full_name" />
        <TextView
            style="@style/FieldChildren"
            android:layout_width="@dimen/_100sdp"
            android:text="trandinhnam1199"
            tool:text="@string/user_name" />
        <TextView
            style="@style/FieldChildren"
            android:layout_width="@dimen/_100sdp"
            android:text="@{user.joinDate}"
            tool:text="@string/joined_date" />
        <TextView
            style="@style/FieldChildren"
            android:layout_width="@dimen/_100sdp"
            android:text="@{(user.type == 0)?@string/admin:@string/user}"
            tool:text="@string/type" />

        <ImageView
            style="@style/FieldChildren"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:src="@drawable/ic_remove"/>

    </LinearLayout>
</layout>