<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools">

    <data>
        <variable
            name="asset"
            type="com.son.finalproject.data.Asset" />

        <variable
            name="category"
            type="com.son.finalproject.data.Category" />
    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            style="@style/FieldChildren"
            android:layout_width="@dimen/_100sdp"
            android:text="@{asset.assetCode}"
            tool:text="@string/asset_code" />

        <TextView
            style="@style/FieldChildren"
            android:text="@{asset.assetName}"
            android:layout_width="@dimen/_100sdp"
            tool:text="@string/asset_name" />

        <TextView
            style="@style/FieldChildren"
            android:text="@{category.categoryName}"
            android:layout_width="@dimen/_100sdp"
            tool:text="@string/category" />

        <TextView
            android:id="@+id/state"
            style="@style/FieldChildren"
            android:layout_width="@dimen/_100sdp"
            tool:text="@string/state1" />

    </LinearLayout>
</layout>