<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools">

    <data>

        <variable
            name="asset"
            type="com.son.finalproject.data.Asset" />

        <variable
            name="category"
            type="com.son.finalproject.data.Category" />
    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_10sdp">

        <TextView
            style="@style/FieldChildren"
            android:layout_width="@dimen/_100sdp"
            android:text="@{asset.assetCode}"
            tool:text="@string/asset_code" />

        <TextView
            style="@style/FieldChildren"
            android:layout_width="@dimen/_100sdp"
            android:text="@{asset.assetName}"
            tool:text="@string/asset_name" />

        <TextView
            style="@style/FieldChildren"
            android:layout_width="@dimen/_100sdp"
            android:text="@{category.categoryName}"
            tool:text="@string/category" />

        <TextView
            android:id="@+id/state"
            style="@style/FieldChildren"
            android:layout_width="@dimen/_100sdp"
            tool:text="@string/state1" />

        <ImageView
            android:id="@+id/btnEdit"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:src="@drawable/ic_edit" />

        <ImageView
            android:id="@+id/btnRemove"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:src="@drawable/ic_remove" />

    </LinearLayout>
</layout>