<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="request"
            type="com.son.finalproject.data.Request" />

        <variable
            name="index"
            type="String"/>

        <variable
            name="isAdmin"
            type="Boolean" />

        <import type="android.view.View"/>
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_field_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_10sdp">

        <TextView
            style="@style/FieldChildren"
            android:layout_width="@dimen/_100sdp"
            android:text="@{index}"
            tools:text="@string/no" />

        <TextView
            style="@style/FieldChildren"
            android:layout_width="@dimen/_100sdp"
            android:text="@{request.assetCode}"
            tools:text="@string/asset_code" />

        <TextView
            style="@style/FieldChildren"
            android:layout_width="@dimen/_100sdp"
            android:text="@{request.asset.assetName}"
            tools:text="@string/asset_name" />

        <TextView
            style="@style/FieldChildren"
            android:layout_width="@dimen/_100sdp"
            android:text="@{request.requestDate}"
            tools:text="@string/assigned_date" />

        <TextView
            android:id="@+id/state"
            style="@style/FieldChildren"
            android:layout_width="@dimen/_100sdp"
            tools:text="@string/state1" />

        <ImageView
            android:id="@+id/btnAccept"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:visibility="@{isAdmin?View.VISIBLE:View.GONE}"
            android:src="@drawable/ic_accept"/>

        <ImageView
            android:id="@+id/btnDeclined"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_width="@dimen/_24sdp"
            android:visibility="@{isAdmin?View.VISIBLE:View.GONE}"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_decline"/>

        <ImageView
            android:id="@+id/btnRemove"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:visibility="@{isAdmin?View.GONE:View.VISIBLE}"
            android:src="@drawable/ic_remove"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>