<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="action"
            type="com.son.finalproject.ui.management.report.viewmodels.ReportViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".temp.fragment.UserFragment">

        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:id="@+id/layout_header"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:background="@drawable/background"
            android:gravity="bottom"
            android:orientation="vertical"
            android:padding="20dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/ic_baseline_perm_contact_calendar_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo"
                android:text="@string/it_asset_management"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:text="@string/hoa_sen_university"
                android:textSize="14sp"
                android:textStyle="italic" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/layout_header"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/title_manage_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/baloo"
                android:gravity="center"
                android:text="@string/report"
                android:textSize="28sp"
                android:textStyle="bold" />


            <HorizontalScrollView
                android:id="@+id/fieldParentLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_manage_user">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/layout_field_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/FieldParent"
                            android:layout_width="@dimen/_100sdp"
                            android:text="@string/category" />

                        <TextView
                            style="@style/FieldParent"
                            android:layout_width="@dimen/_100sdp"
                            android:text="@string/total" />

                        <TextView
                            style="@style/FieldParent"
                            android:layout_width="@dimen/_100sdp"
                            android:text="@string/assigned" />

                        <TextView
                            style="@style/FieldParent"
                            android:layout_width="@dimen/_100sdp"
                            android:text="@string/available" />

                        <TextView
                            style="@style/FieldParent"
                            android:layout_width="@dimen/_100sdp"
                            android:text="@string/notavailable" />
                    </androidx.appcompat.widget.LinearLayoutCompat>


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerReport"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_below="@id/layout_field_title"
                        android:orientation="vertical"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
                </RelativeLayout>
            </HorizontalScrollView>
        </RelativeLayout>
    </RelativeLayout>
</layout>