<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="action"
            type="com.son.finalproject.ui.authentication.viewmodels.AuthenticationViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".SignUpActivity">

        <LinearLayout
            android:id="@+id/layout_header"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo"
                android:text="@string/welcome_to_it_asset_management"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:text="@string/hoa_sen_university"
                android:textSize="14sp"
                android:textStyle="italic" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/layout_header">

            <TextView
                android:id="@+id/tv_signup_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/baloo"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textSize="50sp"
                android:textStyle="bold" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_first_name_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_signup_signup"
                android:layout_marginHorizontal="@dimen/_10sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_firstName"
                    android:hint="@string/first_name"
                    android:text="@={action.liveUser.firstName}"
                    style="@style/TextInputStyle"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/white"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/edt_first_name_signup"
                android:layout_marginHorizontal="@dimen/_10sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_lastname"
                    android:hint="@string/last_name"
                    android:text="@={action.liveUser.lastName}"
                    style="@style/TextInputStyle"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/white"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_username_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/edt_lastname"
                android:layout_marginHorizontal="@dimen/_10sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_username"
                    android:hint="@string/email"
                    android:text="@={action.liveUser.email}"
                    style="@style/TextInputStyle"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/white"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_password_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_username_signup"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="@dimen/_10sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_password"
                    android:drawableStart="@drawable/ic_baseline_info_24"
                    android:text="@={action.liveUser.password}"
                    style="@style/TextInputStyle"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textColorHint="@color/white"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_cf_password_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_password_signup"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="@dimen/_10sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_confirmPassword"
                    android:drawableStart="@drawable/ic_baseline_info_24"
                    android:text="@={action.rewritePassword}"
                    style="@style/TextInputStyle"
                    android:hint="@string/confirm_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textColorHint="@color/white"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_signup_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_cf_password_signup"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#E06C78"
                android:fontFamily="@font/baloo"
                android:text="@string/sign_up"
                android:textSize="25sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </RelativeLayout>
</layout>